# botMaster

./: .env  .env.example  README.md  STATUS.md  check_tables.py  headless_bridge.py  import_schema.py  main.py  pyproject.toml  requirements.txt  run_daemon.py  schema_orchestration.sql  test_agent_spawner.py  test_mariadb_storage.py  test_openmemory.py  test_openmemory_client.py  tmp_on_msg.txt
_archive-2025-10-25/: pyproject.toml
_archive-2025-10-25/botmaster/: agent_runtime.py  llm_providers.py  telegram_client.py
_archive-2025-10-25/mcp/: telegram_server_stub.py
botMaster_data/: botmaster.db  botmaster.db-shm  botmaster.db-wal
botmaster/: __init__.py  agent_runtime.py  agent_spawner.py  cli.py  config.py  llm_providers.py  mariadb_storage.py  openmemory_client.py  orchestrator.py  storage.py  telegram_client.py
botmaster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: test_claude_cli.py  test_minimal.py
